--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,10 +7,12 @@ apply plugin: 'com.google.gms.google-services'
 ext.versions = [
 		// Android
 		targetSdkVersion: 28,
-		minSdkVersion   : 16,
+		minSdkVersion   : 21,
 		buildtools      : "28.0.3",
 		support         : "28.0.0",
 		gmsVersion      : "16.0.0",
+
+		ktxVersion 		 : "1.0.0-beta01",
 
 		// Components
 		constraintlayout: "1.1.3",
@@ -42,7 +44,7 @@ ext.versions = [
 
 def versionMajor = 0
 def versionMinor = 1
-def versionPatch = 1
+def versionPatch = 2
 android {
 	compileSdkVersion versions.targetSdkVersion
 	buildToolsVersion versions.buildtools
@@ -150,7 +152,9 @@ dependencies {
 	implementation 'androidx.appcompat:appcompat:1.0.2'
 	implementation 'com.google.android.material:material:1.0.0'
 	implementation 'androidx.annotation:annotation:1.0.2'
-//	implementation 'androidx.dynamicanimation:dynamicanimation:1.0.0'
+	implementation 'androidx.dynamicanimation:dynamicanimation:1.0.0'
+	implementation "androidx.core:core-ktx:$versions.ktxVersion"
+
 
 	implementation "com.google.android.gms:play-services-places:$versions.gmsVersion"
 	implementation "com.google.android.gms:play-services-location:$versions.gmsVersion"
@@ -187,6 +191,9 @@ dependencies {
 
 	//Timber
 	implementation "com.jakewharton.timber:timber:$versions.timber"
+
+	//PageIndicator
+	implementation 'com.pacioianu.david:ink-page-indicator:1.3.0'
 
 	testImplementation 'org.mockito:mockito-core:2.23.0'
 	testImplementation 'junit:junit:4.12'
