--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
 	<application
 			android:name="com.dimowner.elections.GWApplication"
 			android:allowBackup="true"
-			android:icon="@mipmap/ic_elections"
+			android:icon="@mipmap/ic_elections2"
 			android:label="@string/app_name"
 			android:networkSecurityConfig="@xml/network_security_config"
 			android:roundIcon="@mipmap/ic_elections"
