--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
 			android:icon="@mipmap/ic_elections2"
 			android:label="@string/app_name"
 			android:networkSecurityConfig="@xml/network_security_config"
-			android:roundIcon="@mipmap/ic_elections"
+			android:roundIcon="@mipmap/ic_elections2"
 			android:theme="@style/AppTheme"
 			android:usesCleartextTraffic="true">
 
