--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,19 @@
+buildscript {
+	repositories {
+		maven { url 'https://maven.fabric.io/public' }
+	}
+
+	dependencies {
+		classpath 'io.fabric.tools:gradle:1.+'
+	}
+}
+
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'com.google.gms.google-services'
+apply plugin: 'io.fabric'
 
 ext.versions = [
 		// Android
@@ -204,6 +215,10 @@ dependencies {
 
 	//PhotoView
 	implementation "com.github.chrisbanes:PhotoView:$versions.photoView"
+
+	implementation('com.crashlytics.sdk.android:crashlytics:2.9.8@aar') {
+		transitive = true
+	}
 
 	testImplementation 'org.mockito:mockito-core:2.23.0'
 	testImplementation 'junit:junit:4.12'
