--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,12 +67,6 @@ android {
 		testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 		vectorDrawables.useSupportLibrary = true
 	}
-	buildTypes {
-		release {
-			minifyEnabled false
-			proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-		}
-	}
 
 	def keystorePropertiesFile = rootProject.file("keystore.properties")
 	def keystoreProperties = new Properties()
@@ -114,15 +108,15 @@ android {
 			minSdkVersion versions.minSdkVersion
 			targetSdkVersion versions.targetSdkVersion
 			signingConfig = signingConfigs.dev
-			buildConfigField("String", "SECRET_CODE", "\"$secretCode\"")
+			buildConfigField("String", "SECRET_CODE", "\"$secretCodeDev\"")
 		}
 		releaseConfig {
 			dimension "default"
-			applicationId "com.dimowner.elections"
+			applicationId "com.dimowner.elections.prod"
 			minSdkVersion versions.minSdkVersion
 			targetSdkVersion versions.targetSdkVersion
 			signingConfig = signingConfigs.release
-			buildConfigField("String", "SECRET_CODE", "\"$secretCode\"")
+			buildConfigField("String", "SECRET_CODE", "\"$secretCodeProd\"")
 		}
 	}
 
@@ -167,7 +161,6 @@ dependencies {
 	implementation 'androidx.dynamicanimation:dynamicanimation:1.0.0'
 	implementation "androidx.core:core-ktx:$versions.ktxVersion"
 
-
 	implementation "com.google.android.gms:play-services-places:$versions.gmsVersion"
 	implementation "com.google.android.gms:play-services-location:$versions.gmsVersion"
 
@@ -182,11 +175,6 @@ dependencies {
 	implementation "io.reactivex.rxjava2:rxandroid:$versions.rxJava"
 
 	implementation 'com.google.code.gson:gson:2.8.5'
-//	//RetroFit
-//	implementation "com.squareup.retrofit2:retrofit:$versions.retroFit"
-//	implementation "com.squareup.retrofit2:converter-gson:$versions.retroFit"
-//	implementation "com.squareup.retrofit2:adapter-rxjava2:$versions.retroFit"
-//	implementation "com.squareup.okhttp3:logging-interceptor:$versions.logInterceptor"
 
 	//Dagger2
 	implementation "com.google.dagger:dagger:$versions.dagger2"
